// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a full section correctly 1`] = `
<section
  className="src-components-form-section__container-full src-components-form-section__container"
>
  <div
    id="child"
  />
</section>
`;

exports[`should render a narrow section correctly 1`] = `
<section
  className="src-components-form-section__container-narrow src-components-form-section__container"
>
  <div
    id="child"
  />
</section>
`;

exports[`should render a very wide section correctly 1`] = `
<section
  className="src-components-form-section__container-verywide src-components-form-section__container"
>
  <div
    id="child"
  />
</section>
`;

exports[`should render a wide section correctly 1`] = `
<section
  className="src-components-form-section__container-wide src-components-form-section__container"
>
  <div
    id="child"
  />
</section>
`;
